# soupstone

./: .gitignore  README.md
experiments/hello-usb/: Cargo.toml  build.rs
experiments/hello-usb/.cargo/: config.toml
experiments/qspi-flash-demo/: Cargo.toml
experiments/qspi-flash-demo/src/: main.rs
experiments/soup-app-demo/: Cargo.toml  memory.x  run.sh
experiments/soup-app-demo/.cargo/: config.toml
experiments/soup-app-demo/src/: lib.rs  main.rs
experiments/stage0-ram-payload/: Cargo.toml
experiments/stage0-ram-payload/src/: main.rs
experiments/stage0-updater/: Cargo.toml  README.md
experiments/stage0-updater/src/: main.rs
experiments/xiao-init-stage-minus-1/: Cargo.toml  generate-uf2.sh  memory.x
experiments/xiao-init-stage-minus-1/src/: main.rs
firmware/soup-stuff/: Cargo.toml  rust-toolchain.toml
firmware/soup-stuff/src/: lib.rs
firmware/stage0/: Cargo.toml  build.rs  memory.x
firmware/stage0/src/: main.rs
host/soup-cli/: Cargo.toml  README.md
host/soup-cli/src/: cli.rs  elf.rs  main.rs  port.rs
host/stage0-cli/: Cargo.toml
host/stage0-cli/src/: cli.rs  main.rs
shared/soup-icd/: Cargo.toml
shared/soup-icd/src/: lib.rs
shared/soup-managed/: Cargo.toml
shared/soup-managed/src/: lib.rs
shared/stage0-icd/: Cargo.toml
shared/stage0-icd/src/: lib.rs  managedbuf.rs
