[package]
edition = "2021"
name = "qspi-flash-demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# TODO: macros :(
[dependencies.embassy-executor]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = ["nightly", "integrated-timers"]

[dependencies.soup-icd]
path = "../../shared/soup-icd"
version = "2.0.0"

[dependencies.soup-stuff]
path = "../../firmware/soup-stuff"

[dependencies.ekv]
git = "https://github.com/embassy-rs/ekv"
rev = "5669092c57aafc8d3d552b94a1a3a0ea85896a8c"
features = [
    #
    # default options
    #
    "align-4",
    "page-size-4096",
    "erase-value-255",
    "max-key-size-64",
    "max-value-size-1024",
    "scratch-page-count-4",
    "branching-factor-2",

    #
    # NOT default options
    #
    # total of 512 pages, this allocates 128 (or 512KiB) for ekv
    # default: "max-page-count-256"
    "max-page-count-128",
]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
heapless = "0.7.16"
postcard = "1.0"
rand_core = { version = "0.6.4", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z' # <-

[patch.crates-io.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
