[package]
edition = "2021"
name = "soup-app-demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies.embassy-futures]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"

[dependencies.embassy-executor]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = ["nightly", "integrated-timers"]

[dependencies.embassy-nrf]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = ["nightly", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"]

[dependencies.embassy-usb]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = ["msos-descriptor",]

[dependencies.embassy-time]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = []

[dependencies.embassy-sync]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"
rev = "7a841b58d127cc6d22c8895197d3f4d4c0974ad7"
features = []

[dependencies.soup-icd]
path = "../../shared/soup-icd"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
heapless = "0.7.16"
panic-reset = "0.1.1"
postcard = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z' # <-
