[package]
name = "soup-icd"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", default-features = false, features = ["derive"] }
defmt = { version = "0.3", optional = true }
soup-managed = { path = "../soup-managed", default-features = false }

[features]
default = []
use-std = [
    "soup-managed/use-std",
]
use-defmt = [
    "defmt",
    "soup-managed/use-defmt",
]
