[package]
name = "soup-managed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", default-features = false, features = ["derive"] }
defmt = { version = "0.3", optional = true }

[features]
default = []
use-std = []
use-defmt = ["defmt"]
